Fix distorted images in products list

--- a/less/plugins/ecommerce/products-listing.less
+++ b/less/plugins/ecommerce/products-listing.less
@@ -427,9 +427,7 @@
     // Image
 
     .image {
-        -webkit-flex: 0 0 auto;
-        -ms-flex: 0 0 auto;
-        flex: 0 0 auto;
+        max-width: none;
     }
 }
 
